# AiPi-Open-Kits

./: .gitignore  .gitmodules  README.md  export.sh  update_sdk.sh
AiPi-Cam/: CMakeLists.txt  Makefile  README.md  bl616_psram.ld  flash_prog_cfg.ini  lwipopts_user.h  main.c  proj.conf  usb_config.h  usbh_uvc_uac.h
AiPi-Cam/bl616vtb/: CMakeLists.txt  bl616_flash.ld  board.c  board.h  fw_header.c
AiPi-Cam/bl616vtb/config/: partition_cfg_4M.toml
AiPi-Cam/rtos/: bl_cam_frame.c
AiPi-Cam/video/: dbi_disp.c  dbi_disp.h  lcd_conf_user.h  mjpeg.c  mjpeg.h  pbuff_dvp.c  pbuff_dvp.h  usbh_uvc_callback.c
AiPi-Cam/web/: libcamera.h  libjpeg.h  mlwip_https.c  mlwip_https.h  user_config.h  user_main.c
AiPi-DSL_Dashboard/: CMakeLists.txt  README.md  proj.conf
AiPi-DSL_Dashboard/3D_stl/: 外壳.stl  盖子.stl
AiPi-DSL_Dashboard/Ai-WB2_SmarLight/: Makefile  proj_config.mk
AiPi-DSL_Dashboard/Ai-WB2_SmarLight/main/: blufi_main.c  demo.c
AiPi-DSL_Dashboard/AiPi-DSL_Dashboard_code/: CMakeLists.txt  flash_prog_cfg.ini  proj.conf
AiPi-DSL_Dashboard/AiPi-DSL_Dashboard_code/BLE_HID/: ble_hid_dev.c  ble_hid_dev.h  hog_kb.c  hog_kb.h
AiPi-DSL_Dashboard/AiPi-DSL_Dashboard_code/Voice/: voice_uart.c  voice_uart.h
AiPi-DSL_Dashboard/AiPi-DSL_Dashboard_code/components/: https_client.c  https_client.h
AiPi-DSL_Dashboard/AiPi-DSL_Dashboard_code/lvgl_config/: lcd_conf_user.h  lv_user_config.h
AiPi-DSL_Dashboard/AiPi-DSL_Dashboard_code/main/: FreeRTOSConfig.h  main.c
AiPi-DSL_Dashboard/AiPi-DSL_Dashboard_code/mqtt/: user_mqtt.c  user_mqtt.h
AiPi-DSL_Dashboard/AiPi-DSL_Dashboard_code/wifi/: lwipopts_user.h  wifi_event.c  wifi_event.h
AiPi-DSL_Dashboard/BLE_HID/: ble_hid_dev.c  ble_hid_dev.h  hog_kb.c  hog_kb.h
AiPi-DSL_Dashboard/UI/custom/: custom.c  custom.h
AiPi-DSL_Dashboard/VC_code/: build.properties  离线语音指令表.xlsx
AiPi-DSL_Dashboard/VC_code/unione_lite_app_hb_m/: build.sh  ci.yml  nds32-ae210p.ld  readme.txt  uni_ci.yml
AiPi-DSL_Dashboard/Voice/: voice_uart.c  voice_uart.h
AiPi-DSL_Dashboard/components/: https_client.c
AiPi-DSL_Dashboard/lvgl_config/: lcd_conf_user.h
AiPi-DSL_Dashboard/main/: FreeRTOSConfig.h  main.c
AiPi-DSL_Dashboard/mqtt/: user_mqtt.c  user_mqtt.h
AiPi-DSL_Dashboard/uni_hb_m_solution/unione_lite_app_hb_m/: build.sh  nds32-ae210p.sag
AiPi-DSL_Dashboard/wifi/: lwipopts_user.h  wifi_event.c
AiPi-DSL_MusicPlay/demos/240X320_ui/: CMakeLists.txt  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
AiPi-Eyes-Rx/: CMakeLists.txt  FreeRTOSConfig.h  Makefile  README.md  app_main.h  auadc.c  auadc.h  audac.c  audac.h  audio_record_play.c  bflb_romfs.c  bflb_romfs.h  bsp_es8388.c  es8388_task.c  es8388_task.h  flash_prog_cfg.ini  lv_conf.h  main.c  pcm16k.h  proj.conf  smaninke.h  test.sh  usb_config.h
AiPi-Eyes-Rx/board/: fw_header.c
AiPi-Eyes-Rx/patch/: 0001-enable-8388.patch
AiPi-Eyes_weather/: CMakeLists.txt  audio_pcm.c  lv_conf.h  lwipopts_user.h  main.c
AiPi-Knob/: CMakeLists.txt  Makefile  README.md  audio.c  audio_pcm.c  flash_prog_cfg.ini  lcd_conf_user.h  lv_conf.h  lwipopts_user.h  main.c  proj.conf  touch_conf_user.h
AiPi-Knob/ir/: module_wireless.c
AiPi-Knob/ir/ir_receive/: ir_receive.c  ir_receive.h
AiPi-Knob/ir/ir_send/: ir_send.c  ir_send.h
AiPi-Knob/ui/: CMakeLists.txt  ui_ac.c  ui_boot.c  ui_boot.h  ui_clockScreen.c  ui_factory.c  ui_factory.h  ui_language.c  ui_language.h  ui_light_rgb.c  ui_light_rgb.h  ui_menu.c  ui_menu.h  ui_remote.c  ui_washer.c  ui_washer.h
AiPi-Knob/ui/fonts/: HelveticaNeue_Regular_20.c  HelveticaNeue_Regular_24.c  HelveticaNeue_Regular_48.c  font_SourceHanSansCN_20.c  font_SourceHanSansCN_Medium_22.c
AiPi-Knob/ui/imgs/: AC_unit.c  _logo_alpha_165x56.c  ai_logo.c  ai_logo0.c  bagua.c  ui_img_ac2_png.c  ui_img_ai_png.c  ui_img_led6_png.c  ui_img_tv_png.c  ui_img_washer5_png.c
AiPi-Knob/ui/layer_manage/: lv_example_image.h  lv_example_pub.c  lv_example_pub.h  lv_schedule_basic.c  lv_schedule_basic.h
AiPi-Radar-WakeUp/: CMakeLists.txt  README.md  README_CN.md  flash_prog_cfg.ini  proj.conf
AiPi-Radar-WakeUp/components/BLE_HID/: ble_hid_dev.c  ble_hid_dev.h  hog_kb.c  hog_kb.h
AiPi-Radar-WakeUp/components/CJSON/: cJSON.h
AiPi-Radar-WakeUp/components/Radar_recv/: rd_01_recv.c  rd_01_recv.h
AiPi-Radar-WakeUp/components/UI/: lcd_conf_user.h
AiPi-Radar-WakeUp/components/USB_HID/: hid_keyboard.c  hid_keyboard.h  usb_config.h
AiPi-Radar-WakeUp/components/http_client/: https_client.c  https_client.h
AiPi-Radar-WakeUp/components/wifi/: wifi_event.c  wifi_event.h
AiPi-Radar-WakeUp/config/: lwipopts_user.h
AiPi-Radar-WakeUp/main/: main.c
AiPi-Radar-WakeUp/stl/: 3D_AiPi-DSL_2023-09-16v14.stl  3D_AiPi-DSL_2023-09-16v8.stl
AiPi-Remote/AiPi-Remote_code/: CMakeLists.txt  Makefile  audio.c  audio_pcm.c  flash_prog_cfg.ini  lcd_conf_user.h  lwipopts_user.h  main.c  proj.conf
AiPi-Remote/AiPi-Remote_code/app/: app_task.c  app_task.h  battery_task.c  battery_task.h  button_task.c  button_task.h  chip_include.h  irsend_task.c  irsend_task.h  module_button.c  module_button.h  module_wireless.h  power_task.c  power_task.h  voice_task.c  voice_task.h
AiPi-SCP-2.4/: CMakeLists.txt  README.md  es8388test.c  flash_prog_cfg.ini  lcd_conf_user.h  lv_conf.h  lwipopts_user.h  main.c  proj.conf
AiPi-SCP-2.4/demos/240X320_ui/: CMakeLists.txt  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
AiPi-SCP_SmartCtrl/: CMakeLists.txt  README.md  flash_prog_cfg.ini  proj.conf
AiPi-SCP_SmartCtrl/AiPi-M61-RGB/: CMakeLists.txt  Makefile  flash_prog_cfg.ini  proj.conf
AiPi-SCP_SmartCtrl/AiPi-M61-RGB/config/: lwipopts_user.h
AiPi-SCP_SmartCtrl/config/: FreeRTOSConfig.h
AiPi-SCP_SmartCtrl/main/: main.c
AiPi-SCP_SmartCtrl/otherfile/STL/: 加强件.stl  (+2 more)
examples/AiPi-Cam-D200/: CMakeLists.txt  FreeRTOSConfig.h  Makefile  README.md  bl616_psram.ld  flash_prog_cfg.ini  lwipopts_user.h  main.c  proj.conf  usb_config.h  usbh_uvc_uac.h
examples/AiPi-R286/: CMakeLists.txt  Makefile  flash_prog_cfg.ini  proj.conf
examples/blank/: .gitignore  CMakeLists.txt  Makefile  README.md  flash_prog_cfg.ini  proj.conf
(+1008 files in other folders)
