SET(SOURCES ui_helpers.c
	images/ui_img_beijing_png.c
	images/ui_img_dianliangzhengchang_png.c
	images/ui_img_fengsu_png.c
	images/ui_img_moshi_png.c
	images/ui_img_kaiqi_png.c
	images/ui_img_shangjiantou_png.c
	images/ui_img_xiajiantou_png.c
	screens/ui_Screen_rGKsRocq.c
	ui.c
	ui_helpers.c)

add_library(ui ${SOURCES})